--- a/gry.html
+++ b/gry.html
@@ -20,6 +20,7 @@
             <table border="1">
                 <tr><td><a href="kosmicznykwadrat.html">Kosmiczny Kwadrat</a></td></tr>
                 <tr><td><a href="ucieczka.html">Ucieczka</a></td></tr>
+                <tr><td><a href="kolkoikrzyzyk.html">Kółko i Krzyżyk</a></td></tr>
             </table>
         </div>
     </div>
