--- a/gry.html
+++ b/gry.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <a href="index.html" class="nav-link">Ciekawe</a>
-        <a href="gry.html" class="nav-link" active>Gry</a>
+        <a href="gry.html" class="nav-link active">Gry</a>
         <a href="szkola.html" class="nav-link">Szkoła</a>
         <a href="inne.html" class="nav-link">Inne</a>
     </nav>
