--- a/20250617_kosmicznykwadrat.html
+++ b/20250617_kosmicznykwadrat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pływający Kosmiczny Śmieć</title>
+    <title>Kosmiczny Kwadrat</title>
     <style>
         body {
             margin: 0;
