--- a/gry.html
+++ b/gry.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="index.html" class="nav-link">Ciekawe</a>
-        <a href="gry.html" class="nav-link active">Gry</a>
-        <a href="szkola.html" class="nav-link">Szkoła</a>
-        <a href="inne.html" class="nav-link">Inne</a>
-    </nav>
-    <br><br><br><br>
     <div class="container">
-        <h1>Ciekawe Strony</h1>
-        <div class="table-wrapper">
-            <table border="1">
-                <tr><td><a href="kosmicznykwadrat.html">Kosmiczny Kwadrat</a></td></tr>
-                <tr><td><a href="ucieczka.html">Ucieczka</a></td></tr>
-                <tr><td><a href="kolkoikrzyzyk.html">Kółko i Krzyżyk</a></td></tr>
-            </table>
+        <h1>Gry</h1>
+        <div class="buttons">
+            <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
+                <span>Kółko i Krzyżyk</span>
+            </a>
+            <a href="20250617_kosmicznykwadrat.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324741/kosmicznykwadrat_ltr6kr.jpg" alt="Kosmiczny Kwadrat">
+                <span>Kosmiczny Kwadrat</span>
+            </a>
+            <a href="20250618_ucieczka.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324569/omijanie_gsykcx.jpg" alt="Omijanie">
+                <span>Omijanie</span>
+            </a>
         </div>
     </div>
     <script src="script.js"></script>
