--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="index.html" class="nav-link active">Ciekawe</a>
-        <a href="gry.html" class="nav-link">Gry</a>
-        <a href="szkola.html" class="nav-link">Szkoła</a>
-        <a href="inne.html" class="nav-link">Inne</a>
-    </nav>
-    <br><br><br><br>
     <div class="container">
-        <h1>Ciekawe Strony</h1>
-        <div class="table-wrapper">
-            <table border="1">
-                <tr><td><a href="kolofortuny.html">Koło Fortuny</a></td></tr>
-                <tr><td><a href="kostka.html">Kostka do Gry</a></td></tr>
-            </table>
+        <h1>Aplikacje</h1>
+        <div class="buttons">
+            <a href="20250617_kolofortuny.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750326763/kolofortuny2_dmzd1w.png" alt="Koło Fortuny">
+                <span>Koło Fortuny</span>
+            </a>
+            <a href="20250617_kostka.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750327371/kostkadogry_xgh4is.png" alt="Kostka">
+                <span>Kostka</span>
+            </a>
+            <a href="20250619_tempobiegu.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251231/tempobiegu_vb1sow.jpg" alt="Tempo Biegu">
+                <span>Tempo Biegu</span>
+            </a>
         </div>
     </div>
     <script src="script.js"></script>
