--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251231/tempobiegu_vb1sow.jpg" alt="Tempo Biegu">
                 <span>Tempo Biegu</span>
             </a>
+            <a href="20250620_krotoszankarower.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750444141/krotorower_uyslkq.png" alt="Krotoszyńska Odznaka Krajoznawcza dla Kolarzy">
+                <span>Krotoszyńska Odznaka Krajoznawcza dla Kolarzy</span>
+            </a>
         </div>
     </div>
     <script src="script.js"></script>
