--- a/gry.html
+++ b/gry.html
@@ -18,6 +18,10 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324741/kosmicznykwadrat_ltr6kr.jpg" alt="Kosmiczny Kwadrat">
                 <span>Kosmiczny Kwadrat</span>
             </a>
+            <a href="20250620_zbieraniejablek.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750450328/logozbieraniajablek_kndluj.png" alt="Zbieranie Jabłek">
+                <span>Zbieranie Jabłek</span>
+            </a>
             <a href="20250618_ucieczka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324569/omijanie_gsykcx.jpg" alt="Omijanie">
                 <span>Omijanie</span>
